java-cc/src/uniandes/teolen/parserJavaCC/parserProlog/ParserProlog.jj
/**
 * JavaCC file
 */
 
options {
  IGNORE_CASE = false;
  STATIC = false;
}
PARSER_BEGIN(ParserProlog)
package uniandes.teolen.parserJavaCC.parserProlog;

import java.util.*;
 
public class ParserProlog {

} 

PARSER_END(ParserProlog)

SKIP :
{
 	" " | "\r" | "\t" | "\n"

}
TOKEN : /* OPERATORS */
{
    <ARROW: ":-">
}

TOKEN :
{
    < INT: ( <DIGIT> )( <DIGIT> )* >
|   < #DIGIT: "0" | "1" | "2"| "3" | "4" | "5" |  "6" | "7" | "8" |"9" >
|   < #MAY: ["A"-"Z"] >
|   < #MIN: ["a"-"z"] >
|   < VAR: ( <MAY>  ( <MAY > | < MIN >)* )>
|   < NOMB: ( <MIN>  ( <MAY > | < MIN >)* )>
}

void hr():
{}
{
  functor() (<ARROW>  functor() (","  functor())*)? "."
	}

void functor():
{}
{
(
  	< NOMB> ("(" arg() (","  arg())* ")")?
)
	
}
void arg():
{}
{
  < INT > | functor() | list() | < VAR >
}

void list() throws Error:
{}

{

"[" (arg() (","  arg())* ("|" arg())?)? "]"}
  
